--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,7 +32,13 @@
 en:
   hello: "Hello world"
 
-  oregon_digital_resources:
-    form:
-      title: "OregonDigital JSON"
-      add_item: "Ingest It"
+  oregon_digital:
+    resources:
+      form:
+        title: "OregonDigital JSON"
+        add_item: "Ingest It"
+
+    list_uploads:
+      form:
+        title: "List of OregonDigital IDs"
+        add_item: "Upload List"
